# near-reverse-auction

./: Cargo.toml  README.md  build.sh  deploy.sh  dev-deploy.sh
res/: contract.wasm
src/: auction.rs  lib.rs  nft.rs  othercontract.rs
src/non_fungible_token/core/: core_impl.rs
