[package]
name = "near-reverse-auction"
version = "0.1.0"
edition = "2018"
authors = ["Bao Tran <tieubaoca98@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
near-sdk = "3.1.0"
near-contract-standards = "3.1.1"
[profile.release]
codegen-units=24
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true